--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
 .App {
-  text-align: center;
+    width : 70%;
+    margin: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root>div>div:nth-child(n)>div>div {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.15);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+* {
+    font-family: 'Roboto', sans-serif !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card-title {
+    font-size  : 21px;
+    font-weight: 100 !important;
+    color      : dimgrey;
 }
 
-.App-link {
-  color: #61dafb;
+.card-img-top {
+    height : 100%;
+    padding: 10px;
+    height : 300px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header {
+    position  : fixed;
+    width     : 100%;
+    height    : 72px;
+    background: whitesmoke;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.20), 0 2px 10px 0 rgba(0, 0, 0, 0.20);
+    z-index   : 8;
+    top       : 0;
+    left      : 0;
+}
+
+.logo {
+    height    : 82px;
+    margin-top: -8px;
+    width     : 93px;
+}
+
+.activeCard {
+    display                    : inline-block;
+    vertical-align             : middle;
+    -webkit-transform          : perspective(1px) translateZ(0);
+    transform                  : perspective(1px) translateZ(0);
+    box-shadow                 : 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: .3s;
+    transition-duration        : .3s;
+    -webkit-transition-property: box-shadow, transform;
+    transition-property        : box-shadow, transform
+}
+
+.activeCard {
+    box-shadow       : 0 10px 10px -10px rgba(0, 0, 0, .5);
+    -webkit-transform: scale(1.03);
+    transform        : scale(1.03)
 }
